Wrap messages correctly and break long words such as hyperlinks

--- a/WhatsApp/index.css
+++ b/WhatsApp/index.css
@@ -87,10 +87,11 @@
 
 .message {
     width: 60%;
-    white-space: pre-line;
+    white-space: pre-wrap;
     margin: 5px 20px;
     padding: 10px;
     border-radius: 10px;
+    word-wrap: break-word;
 }
 
 .left {
